light_sensor_TEMT6000/build/log/idf_py_stdout_output_4312
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D C:\Users\PC\workspace\TMET6000_light_sensor\build\bootloader\esp-idf\esptool_py && python C:/Espressif/frameworks/esp-idf-v5.0.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 C:/Users/PC/workspace/TMET6000_light_sensor/build/bootloader/bootloader.bin"
Bootloader binary size 0x4ee0 bytes. 0x3120 bytes (38%) free.
[2/9] Building C object esp-idf/TEMT6000/CMakeFiles/__idf_TEMT6000.dir/TEMT6000.c.obj
FAILED: esp-idf/TEMT6000/CMakeFiles/__idf_TEMT6000.dir/TEMT6000.c.obj 
ccache C:\Espressif\tools\riscv32-esp-elf\esp-2022r1-11.2.0\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -IC:/Users/PC/workspace/TMET6000_light_sensor/build/config -IC:/Users/PC/workspace/TMET6000_light_sensor/components/TEMT6000/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/newlib/platform_include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include/freertos -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32c3/. -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32c3/private_include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/heap/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/log/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/soc/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/soc/esp32c3/. -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/soc/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/hal/esp32c3/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/hal/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/hal/platform_port/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/include/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/esp32c3 -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_common/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/port/soc -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/port/include/riscv -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/port/include/private -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/riscv/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include/apps -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include/apps/sntp -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/lwip/src/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include/arch -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/driver/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/driver/deprecated -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_pm/include -IC:/Espressif/frameworks/esp-idf-v5.0.2/components/esp_ringbuf/include -march=rv32imc  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fmacro-prefix-map=C:/Users/PC/workspace/TMET6000_light_sensor=. -fmacro-prefix-map=C:/Espressif/frameworks/esp-idf-v5.0.2=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.2-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/TEMT6000/CMakeFiles/__idf_TEMT6000.dir/TEMT6000.c.obj -MF esp-idf\TEMT6000\CMakeFiles\__idf_TEMT6000.dir\TEMT6000.c.obj.d -o esp-idf/TEMT6000/CMakeFiles/__idf_TEMT6000.dir/TEMT6000.c.obj -c C:/Users/PC/workspace/TMET6000_light_sensor/components/TEMT6000/TEMT6000.c
In file included from C:/Users/PC/workspace/TMET6000_light_sensor/components/TEMT6000/TEMT6000.c:2:
C:/Espressif/frameworks/esp-idf-v5.0.2/components/driver/deprecated/driver/adc.h:19:2: warning: #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively" [-Wcpp]
   19 | #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively"
      |  ^~~~~~~
C:/Users/PC/workspace/TMET6000_light_sensor/components/TEMT6000/TEMT6000.c: In function 'TEMT6000_init':
C:/Users/PC/workspace/TMET6000_light_sensor/components/TEMT6000/TEMT6000.c:11:31: error: 'ADC1_CHANNEL_6' undeclared (first use in this function); did you mean 'ADC1_CHANNEL_4'?
   11 |     adc1_config_channel_atten(ADC1_CHANNEL_6, ADC_ATTEN_DB_11);
      |                               ^~~~~~~~~~~~~~
      |                               ADC1_CHANNEL_4
C:/Users/PC/workspace/TMET6000_light_sensor/components/TEMT6000/TEMT6000.c:11:31: note: each undeclared identifier is reported only once for each function it appears in
C:/Users/PC/workspace/TMET6000_light_sensor/components/TEMT6000/TEMT6000.c: In function 'TEMT6000_getLight':
C:/Users/PC/workspace/TMET6000_light_sensor/components/TEMT6000/TEMT6000.c:18:34: error: 'ADC1_CHANNEL_6' undeclared (first use in this function); did you mean 'ADC1_CHANNEL_4'?
   18 |     int adc_value = adc1_get_raw(ADC1_CHANNEL_6);
      |                                  ^~~~~~~~~~~~~~
      |                                  ADC1_CHANNEL_4
ninja: build stopped: subcommand failed.
